--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,7 @@
     />
     <meta
       name="ORIONIS CI"
-      content="ORIONIS COTE D'IVOIRE - Mall Z4 7ème étage, 4 Rue Paul Langevin,
-              Abidjan Côte d'Ivoire,  Capital : 600.000.000 FCFA. RCCM : CI-ABJ-03-2019-B14-09769 • CC :
-              1926349 G • Tél : (+225) 2721519062 • BP 2709 ABJ 06"
+      content="ORIONIS est une entreprise de service en conseils et ingénierie informatique, spécialisée dans la transformation digitale et la construction, la conception et la promotion de site web et application d’innovante."
     />
     <title>ORIONIS COTE D'IVOIRE</title>
   </head>
